➕ Add clj-async-profiler
Why:
- Profiling page render times to make them faster, considering that prod
  is running on a nearly 20-year-old computer.